ARROW-9606: [C++][Dataset] Support "a"_.In(<>).Assume(<compound>)"